; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/x11/extr_x11_image.c_next_pool_image.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/x11/extr_x11_image.c_next_pool_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32**, i32, i64 }

@info = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@POOLSIZE = common dso_local global i64 0, align 8
@False = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @next_pool_image to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @next_pool_image() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @info, i32 0, i32 0), align 8
  %2 = add nsw i64 %1, 1
  %3 = load i64, i64* @POOLSIZE, align 8
  %4 = icmp sge i64 %2, %3
  br i1 %4, label %5, label %16

5:                                                ; preds = %0
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @info, i32 0, i32 3), align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %5
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @info, i32 0, i32 2), align 8
  %10 = load i32, i32* @False, align 4
  %11 = call i32 @XSync(i32 %9, i32 %10)
  br label %15

12:                                               ; preds = %5
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @info, i32 0, i32 2), align 8
  %14 = call i32 @XFlush(i32 %13)
  br label %15

15:                                               ; preds = %12, %8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @info, i32 0, i32 0), align 8
  br label %16

16:                                               ; preds = %15, %0
  %17 = load i32**, i32*** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @info, i32 0, i32 1), align 8
  %18 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @info, i32 0, i32 0), align 8
  %19 = add nsw i64 %18, 1
  store i64 %19, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @info, i32 0, i32 0), align 8
  %20 = getelementptr inbounds i32*, i32** %17, i64 %18
  %21 = load i32*, i32** %20, align 8
  ret i32* %21
}

declare dso_local i32 @XSync(i32, i32) #1

declare dso_local i32 @XFlush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
